agentgateway/agentgateway-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-route
spec:
  hostnames:
  - test.sandbox.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: agentgateway-proxy
    namespace: agentgateway-system
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: sandbox-api-service
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite          
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
